--- a/residential.html
+++ b/residential.html
@@ -228,7 +228,7 @@
         <div class="row service-card">
 
           <div class="image-placeholder col-12 col-sm-12 col-md-3 col-lg-3 col-xxl-3">
-            <img class="service-image" src="Resources/due_diligence.png" alt="Due Diligence">
+            <img class="service-image" src="Resources/advisory.png" alt="Advisory">
           </div>
 
           <div class="information-card col-12 col-sm-12 col-md-9 col-lg-9 col-xxl-9">
