--- a/live_projects.html
+++ b/live_projects.html
@@ -247,7 +247,7 @@
 
             <div class="project-information">
               <h3 class="project-title">Logo for Seedhe Rasoi Se</h3>
-              <p class="project-description"><a href="https://www.youtube.com/c/SeedheRasoiSe" style="text-decoration: none;">Seedhe Rasoi Se</a> is a YouTube cooking channel, hosted by Mrs. Shweta Tiwary where she shows you how to make delicacies from across the country at home with a new episode every weekend.</p>
+              <p class="project-description"><a class="text-link" href="https://www.youtube.com/c/SeedheRasoiSe">Seedhe Rasoi Se</a> is a YouTube cooking channel, hosted by Mrs. Shweta Tiwary where she shows you how to make delicacies from across the country at home with a new episode every weekend.</p>
             </div>
 
             <!-- <div class="project-cta">
