Updated contact us navigation

--- a/contact_us.html
+++ b/contact_us.html
@@ -146,7 +146,7 @@
 
       <!-- Contact Us Banner -->
 
-      <div class="banner">
+      <div id="reach_out_to_us" class="banner">
 
         <div class="banner-information">
 
@@ -154,7 +154,7 @@
 
           <p class="banner-description">Are you looking to get assistance for your business? Reach out to us and we'll get you the help that you need to drive growth.</p>
 
-          <a href="#reach_out_to_us">
+          <a href="#reach_out_form">
             <button class="banner-button" type="button" name="button">Get Started</button>
           </a>
 
@@ -164,7 +164,7 @@
 
       <!-- Reach Out to Us Section -->
 
-      <div id="reach_out_to_us" class="reach-out-to-us">
+      <div id="reach_out_form" class="reach-out-to-us">
 
         <div class="reach-out-to-us-header">
 
