Updated the testimonials section

--- a/about_us.html
+++ b/about_us.html
@@ -331,14 +331,14 @@
           infinite: false,
           speed: 300,
           slidesToShow: 3,
-          slidesToScroll: 1,
+          slidesToScroll: 3,
           arrows: true,
           responsive: [
             {
               breakpoint: 1024,
               settings: {
                 slidesToShow: 3,
-                slidesToScroll: 1,
+                slidesToScroll: 3,
                 infinite: true,
                 dots: true,
                 arrows: true
@@ -380,25 +380,25 @@
 
             <div class="carousel-item active">
 
-              <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-              <img class="testimonial-image" src="Resources/image-equilibrium.jpg" alt="">
-              <span class="client-name">Pebbles, New York</span>
+              <h2 class="testimonial-text">I love how the logo finally turned out. Just adds that extra bit of spice to my food channel.</h2>
+              <img class="testimonial-image" src="Resources/seedhe_rasoi_se_logo.png" alt="Seedhe Rasoi Se">
+              <span class="client-name">Seedhe Rasoi Se</span>
 
             </div>
 
             <div class="carousel-item">
 
-              <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-              <img class="testimonial-image" src="Resources/image-equilibrium.jpg" alt="">
-              <span class="client-name">Beverly, Illinois</span>
+              <h2 class="testimonial-text">We wanted the ethnicity of our products to show up in our logo. They totally hit the brief.</h2>
+              <img class="testimonial-image" src="Resources/decorgenix_international_logo.png" alt="Decorgenix International">
+              <span class="client-name">Decorgenix International</span>
 
             </div>
 
             <div class="carousel-item">
 
-              <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-              <img class="testimonial-image" src="Resources/image-equilibrium.jpg" alt="">
-              <span class="client-name">Beverly, Illinois</span>
+              <h2 class="testimonial-text">Our logo turned out to be the image of what we want our brand to be. RRCS made it easy.</h2>
+              <img class="testimonial-image" src="Resources/tutor_here_logo.png" alt="Tutor Here">
+              <span class="client-name">Tutor Here</span>
 
             </div>
 
@@ -481,14 +481,14 @@
         infinite: false,
         speed: 300,
         slidesToShow: 3,
-        slidesToScroll: 1,
+        slidesToScroll: 3,
         arrows: true,
         responsive: [
           {
             breakpoint: 1024,
             settings: {
               slidesToShow: 3,
-              slidesToScroll: 1,
+              slidesToScroll: 3,
               infinite: true,
               dots: true,
               arrows: true
