--- a/expand_your_business.html
+++ b/expand_your_business.html
@@ -87,7 +87,7 @@
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <li><a class="dropdown-item" href="live_projects.html">LIVE PROJECTS</a></li>
-                    <li><a class="dropdown-item" href="case_studies.html">CASE STUDIES</a></li>
+                    <!-- <li><a class="dropdown-item" href="case_studies.html">CASE STUDIES</a></li> -->
                   </ul>
                 </li>
 
@@ -393,7 +393,7 @@
           <a class="group-header" href="">OUR PROJECTS</a>
           <ul class="link-group">
             <li><a class="footer-link" href="live_projects.html">LIVE PROJECTS</a></li>
-            <li><a class="footer-link" href="case_studies.html">CASE STUDIES</a></li>
+            <!-- <li><a class="footer-link" href="case_studies.html">CASE STUDIES</a></li> -->
           </ul>
 
         </div>
