Updated footer links

--- a/case_studies.html
+++ b/case_studies.html
@@ -345,7 +345,7 @@
 
       <div class="footer-logo">
         <a class="" href="index.html">
-          <img src="Resources/rrcs_logo.png" alt="" width="80" class="logo d-inline-block align-text-top">
+          <img src="Resources/rrcs_logo.png" alt="Logo" width="80" class="logo d-inline-block align-text-top">
         </a>
       </div>
 
@@ -353,7 +353,7 @@
 
         <div class="footer-column col-12 col-sm-12 col-md-3 col-lg-3 col-xxl-3">
 
-          <a class="group-header" href="">OUR EXPERTISE</a>
+          <h3 class="group-header">OUR EXPERTISE</h3>
           <ul class="link-group">
             <li><a class="footer-link" href="our_expertise_finance.html">FINANCE</a></li>
             <li><a class="footer-link" href="our_expertise_food.html">FOOD & BEVERAGES</a></li>
@@ -366,17 +366,17 @@
 
         <div class="footer-column col-12 col-sm-12 col-md-3 col-lg-3 col-xxl-3">
 
-          <a class="group-header" href="">OUR PROJECTS</a>
+          <h3 class="group-header">OUR PROJECTS</h3>
           <ul class="link-group">
             <li><a class="footer-link" href="live_projects.html">LIVE PROJECTS</a></li>
-            <li><a class="footer-link" href="case_studies.html">CASE STUDIES</a></li>
+            <!-- <li><a class="footer-link" href="case_studies.html">CASE STUDIES</a></li> -->
           </ul>
 
         </div>
 
         <div class="footer-column col-12 col-sm-12 col-md-3 col-lg-3 col-xxl-3">
 
-          <a class="group-header" href="">ABOUT US</a>
+          <a class="group-header" href="about_us.html">ABOUT US</a>
           <ul class="link-group">
             <li><a class="footer-link" href="about_us.html#our_story">OUR STORY</a></li>
             <li><a class="footer-link" href="about_us.html#our_core_beliefs">OUR CORE BELIEFS</a></li>
@@ -390,7 +390,7 @@
 
         <div class="footer-column col-12 col-sm-12 col-md-3 col-lg-3 col-xxl-3">
 
-          <a class="group-header" href="">CONTACT US</a>
+          <a class="group-header" href="contact_us.html">CONTACT US</a>
           <ul class="link-group">
             <li><a class="footer-link" href="contact_us.html#reach_out_to_us">REACH OUT TO US</a></li>
             <li><a class="footer-link" href="contact_us.html#partner_with_us">PARTNER WITH US</a></li>
