Updated homepage banner navigation

--- a/index.html
+++ b/index.html
@@ -164,7 +164,11 @@
 
           <p class="banner-description">The urgency for swift and efficient business solutions has risen now more than ever. We promise to deliver impact that produces the best results for you and your business now, when you need it most.</p>
 
-          <button class="banner-button" id="modal_open" type="button" name="button" data-bs-toggle="modal" data-bs-target="#contact_form">Discover Change</button>
+          <a href="#our_approach">
+            <button class="banner-button" type="button" name="button">Discover Change</button>
+          </a>
+
+          <!-- <button class="banner-button" id="modal_open" type="button" name="button" data-bs-toggle="modal" data-bs-target="#contact_form">Discover Change</button> -->
 
           <!-- Reach Out To Us Modal -->
 
@@ -268,7 +272,7 @@
 
       <!-- Our Approach Section -->
 
-      <div class="our-approach">
+      <div id="our_approach" class="our-approach">
 
         <div class="section-header">
 
