Updated our projects banner navigation

--- a/live_projects.html
+++ b/live_projects.html
@@ -164,7 +164,11 @@
 
           <p class="banner-description">We have had the good fortune of working on a diverse set of projects for various brands, and each of them have taught us something new. Take a look at our successes and see how we can help your business.</p>
 
-          <button class="banner-button" id="modal_open" type="button" name="button" data-bs-toggle="modal" data-bs-target="#contact_form">Get in Touch</button>
+          <a href="#live_projects">
+            <button class="banner-button" type="button" name="button">See Our Work</button>
+          </a>
+
+          <!-- <button class="banner-button" id="modal_open" type="button" name="button" data-bs-toggle="modal" data-bs-target="#contact_form">Get in Touch</button> -->
 
         </div>
 
@@ -172,7 +176,7 @@
 
       <!-- Live Projects Section -->
 
-      <div class="live-projects">
+      <div id="live_projects" class="live-projects">
 
         <div class="section-header">
           <h2 class="section-title">LIVE PROJECTS</h2>
