--- a/index.html
+++ b/index.html
@@ -16,8 +16,18 @@
       gtag('config', 'G-ETJ6PQLPWK');
     </script>
 
+    <title>RRCS Business Consulting Services</title>
+
+    <!-- Meta Data -->
     <meta charset="utf-8" />
-    <title>RRCS</title>
+    <meta
+      name="description"
+      content="We provide swift and efficient business consulting solutions that deliver great impact and produce the best results for you and your business now, when you need it most."
+    />
+    <meta
+      name="keywords"
+      content="consulting, consultancy, business consulting, digital transformation, business consultant, management consulting, marketing consultant, marketing management, digital marketing agency, commodity market, commodity prices, financial consultant, consultant it, technology consultant, consulting firms, consulting jobs, business management consultant, it consulting services, consulting services, strategy consulting, grain trade, business consulting services, real estate consultant, expert consultancy, digital marketing services, digital agency, project, finance, tech, commodity, services"
+    />
 
     <!-- Responsive Code Activator -->
     <meta
