--- a/project_finance.html
+++ b/project_finance.html
@@ -13,8 +13,18 @@
       gtag('config', 'G-ETJ6PQLPWK');
     </script>
 
-    <meta charset="utf-8">
-    <title>Project Finance</title>
+    <title>RRCS - Project Finance Business Consulting Services</title>
+
+    <!-- Meta Data -->
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Our deep strategic and financial consulting expertise helps clients shape their future, accelerate business growth by building a solid foundation to match their long-term vision."
+    />
+    <meta
+      name="keywords"
+      content="financing, project finance, investment, commercial investment, funding, capital investment, private equity, investor management, real estate investment, real estate investing, commercial real estate, commercial property for sale, investment banking, investment properties, finance service, inestment property, property investment company, private investment company, commercial property investment, real estate investments, commercial real estate property, capital and investment, finance infrastructure"
+    />
 
     <!-- Responsive Code Activator -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
