--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
     <meta
       name="keywords"
-      content="consulting, consultancy, business consulting, digital transformation, business consultant, management consulting, marketing consultant, marketing management, digital marketing agency, commodity market, commodity prices, financial consultant, consultant it, technology consultant, consulting firms, consulting jobs, business management consultant, it consulting services, consulting services, strategy consulting, grain trade, business consulting services, real estate consultant, expert consultancy, digital marketing services, digital agency, project, finance, tech, commodity, services"
+      content="rrcs, raghav raj, raghav raj consultancy services, consultancy services, consulting services, consulting, consultancy, business consulting, digital transformation, business consultant, management consulting, marketing consultant, marketing management, digital marketing agency, commodity market, commodity prices, financial consultant, consultant it, technology consultant, consulting firms, consulting jobs, business management consultant, it consulting services, consulting services, strategy consulting, grain trade, business consulting services, real estate consultant, expert consultancy, digital marketing services, digital agency, project, finance, tech, commodity, services"
     />
 
     <!-- Responsive Code Activator -->
