--- a/about_us.html
+++ b/about_us.html
@@ -450,7 +450,7 @@
 
             <div class="team-title-description">
 
-              <a class="team-link" href="Resources/portfolio_raghavendra_singh.pdf"><h2 class="team-title">Raghavendra Singh</h2></a>
+              <h2 class="team-title">Raghavendra Singh</h2>
               <p class="team-description">Chief Strategy Officer</p>
 
             </div>
