--- a/commercial.html
+++ b/commercial.html
@@ -13,8 +13,18 @@
       gtag('config', 'G-ETJ6PQLPWK');
     </script>
 
-    <meta charset="utf-8">
-    <title>Commercial Real Estate</title>
+    <title>RRCS - Commercial Real Estate Consulting Services</title>
+
+    <!-- Meta Data -->
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="We provide swift and efficient solutions for your commercial real estate requirements and portfolio, including all due diligence and best financing options."
+    />
+    <meta
+      name="keywords"
+      content="real estate, commercial real estate, commercial property for sale, commercial rental space, commercial property for rent, real estate companies, commercial real estate for sale, real estate offices near me, commercial property, commercial property for sale near me, commercial buildings for sale, commercial property for lease, commercial real estate near me, commercial real estate agent, real estate investing, investment properties, commercial rental property, real estate business, retail space for lease, business real estate, commercial building, weworks, office spaces, coworking space, working space, coworking space near me, co working, shared office, workplace near me, shared workspace, work space near me, commercial property for sale, real estate for sale, real estate agents"
+    />
 
     <!-- Responsive Code Activator -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
