--- a/our_expertise_finance.html
+++ b/our_expertise_finance.html
@@ -16,7 +16,7 @@
       gtag('config', 'G-ETJ6PQLPWK');
     </script>
 
-    <title>RRCS - Financial Consulting Services</title>
+    <title>RRCS - Financial Business Consulting Services</title>
 
     <!-- Meta Data -->
     <meta charset="utf-8" />
