--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       type="image/x-icon"
     />
 
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.rrcs.co/index.html">
+
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
