--- a/live_projects.html
+++ b/live_projects.html
@@ -185,6 +185,29 @@
         <div class="row g-0 project-card">
 
           <div class="image-placeholder col-12 col-sm-12 col-md-3 col-lg-3 col-xxl-3">
+            <img class="project-image" src="Resources/aarogyaai_logo.png" alt="AarogyaAI">
+          </div>
+
+          <div class="information-card col-12 col-sm-12 col-md-9 col-lg-9 col-xxl-9">
+
+            <div class="project-information">
+              <h3 class="project-title">UI / UX Design for AarogyaAI</h3>
+              <p class="project-description">We worked on UI / UX Design for a lead-generation website for <a class="text-link" href="https://aarogya.ai">AarogyaAI</a>, a VC-backed healthtech startup. We also worked on UI / UX for their <a class="text-link" href="https://app.aarogya.ai">flagship product</a>, that uses AI for diagnostics.</p>
+            </div>
+
+            <!-- <div class="project-cta">
+              <a class="project-card-link" href="#">
+                <button class="read-more" type="button" name="button">Read More</button>
+              </a>
+            </div> -->
+
+          </div>
+
+        </div>
+
+        <div class="row g-0 project-card">
+
+          <div class="image-placeholder col-12 col-sm-12 col-md-3 col-lg-3 col-xxl-3">
             <img class="project-image" src="Resources/decorgenix_international_logo.png" alt="Decorgenix International">
           </div>
 
