Minor CSS updates

--- a/live_projects.html
+++ b/live_projects.html
@@ -191,7 +191,7 @@
           <div class="information-card col-12 col-sm-12 col-md-9 col-lg-9 col-xxl-9">
 
             <div class="project-information">
-              <h3 class="project-title">UI / UX Design for AarogyaAI</h3>
+              <h3 class="project-title">UI / UX Design (AarogyaAI)</h3>
               <p class="project-description">We worked on UI / UX Design for a lead-generation website for <a class="text-link" href="https://aarogya.ai">AarogyaAI</a>, a VC-backed healthtech startup. We also worked on UI / UX for their <a class="text-link" href="https://app.aarogya.ai">flagship product</a>, that uses AI for diagnostics.</p>
             </div>
 
@@ -214,7 +214,7 @@
           <div class="information-card col-12 col-sm-12 col-md-9 col-lg-9 col-xxl-9">
 
             <div class="project-information">
-              <h3 class="project-title">Logo for Decorgenix International</h3>
+              <h3 class="project-title">Brand Identity (Decorgenix)</h3>
               <p class="project-description">Decorgenix International, estalished in 2021, is a trustworthy and reliable supplier and exporter of Indian spices, organic jaggery, jaggery powder and other Indian commodities to all over the world.</p>
             </div>
 
@@ -237,7 +237,7 @@
           <div class="information-card col-12 col-sm-12 col-md-9 col-lg-9 col-xxl-9">
 
             <div class="project-information">
-              <h3 class="project-title">Logo for Tutor Here</h3>
+              <h3 class="project-title">Brand Identity (Tutor Here)</h3>
               <p class="project-description">Tutor Here is a community of passionate teachers and learners who work towards simplifying learning with workshops, yoga and various courses in four countries.</p>
             </div>
 
@@ -260,7 +260,7 @@
           <div class="information-card col-12 col-sm-12 col-md-9 col-lg-9 col-xxl-9">
 
             <div class="project-information">
-              <h3 class="project-title">Logo for Candlium</h3>
+              <h3 class="project-title">Brand Identity (Candlium)</h3>
               <p class="project-description">Candlium is a US based candlemaker, specialising in their environment-friendly candle designs, which incorporate battery operated designs to produce the effect of a real flame.</p>
             </div>
 
@@ -283,7 +283,7 @@
           <div class="information-card col-12 col-sm-12 col-md-9 col-lg-9 col-xxl-9">
 
             <div class="project-information">
-              <h3 class="project-title">Logo for Seedhe Rasoi Se</h3>
+              <h3 class="project-title">Brand Identity (Seedhe Rasoi Se)</h3>
               <p class="project-description"><a class="text-link" href="https://www.youtube.com/c/SeedheRasoiSe">Seedhe Rasoi Se</a> is a YouTube cooking channel, hosted by Mrs. Shweta Tiwary where she shows you how to make delicacies from across the country at home with a new episode every weekend.</p>
             </div>
 
@@ -306,7 +306,7 @@
           <div class="information-card col-12 col-sm-12 col-md-9 col-lg-9 col-xxl-9">
 
             <div class="project-information">
-              <h3 class="project-title">Logo for Harsh Photography</h3>
+              <h3 class="project-title">Brand Identity (Harsh Photography)</h3>
               <p class="project-description">Harsh Singh is an automotive photographer who has worked with various luxury automobile brands, such as Lamborghini, Ducati, Mercedes and Audi in India.</p>
             </div>
 
