Updates live projects content

--- a/live_projects.html
+++ b/live_projects.html
@@ -191,8 +191,8 @@
           <div class="information-card col-12 col-sm-12 col-md-9 col-lg-9 col-xxl-9">
 
             <div class="project-information">
-              <h3 class="project-title">UI / UX Design (AarogyaAI)</h3>
-              <p class="project-description">We worked on UI / UX Design for a lead-generation website for <a class="text-link" href="https://aarogya.ai">AarogyaAI</a>, a VC-backed healthtech startup. We also worked on UI / UX for their <a class="text-link" href="https://app.aarogya.ai">flagship product</a>, that uses AI for diagnostics.</p>
+              <h3 class="project-title">Product Design (AarogyaAI)</h3>
+              <p class="project-description">We worked on UI / UX for a lead-generation website for <a class="text-link" href="https://aarogya.ai">AarogyaAI</a>, a VC-backed healthtech startup. We also worked on UI / UX for their <a class="text-link" href="https://app.aarogya.ai">flagship product</a>, that utilises AI for diagnostics.</p>
             </div>
 
             <!-- <div class="project-cta">
