Updated 'About Us'

--- a/about_us.html
+++ b/about_us.html
@@ -451,7 +451,7 @@
             <div class="team-title-description">
 
               <h2 class="team-title">Raghavendra Singh</h2>
-              <p class="team-description">Chief Strategy Officer</p>
+              <p class="team-description">Chief Design Officer</p>
 
             </div>
 
