Modified about us page

--- a/about_us.html
+++ b/about_us.html
@@ -420,7 +420,7 @@
 
       <!-- Our Team Section -->
 
-      <div id="our_team" class="our-team">
+      <!-- <div id="our_team" class="our-team">
 
         <h3 class="our-team-label">OUR TEAM</h3>
         <h2 class="our-team-title">People Who Power You</h2>
@@ -515,7 +515,7 @@
 
         </script>
 
-      </div>
+      </div> -->
 
       <!-- Our CSR Initiatives Section -->
 
