--- a/blog_template.html
+++ b/blog_template.html
@@ -91,7 +91,7 @@
                     <li><a class="dropdown-item" href="about_us.html#our_core_beliefs">OUR CORE BELIEFS</a></li>
                     <li><a class="dropdown-item" href="about_us.html#our_blogs">OUR BLOGS</a></li>
                     <li><a class="dropdown-item" href="about_us.html#our_testimonials">OUR TESTIMONIALS</a></li>
-                    <li><a class="dropdown-item" href="about_us.html#our_team">OUR TEAM</a></li>
+                    <!-- <li><a class="dropdown-item" href="about_us.html#our_team">OUR TEAM</a></li> -->
                     <li><a class="dropdown-item" href="about_us.html#our_csr">OUR CSR INITIATIVES</a></li>
                   </ul>
                 </li>
@@ -365,7 +365,7 @@
             <li><a class="footer-link" href="about_us.html#our_core_beliefs">OUR CORE BELIEFS</a></li>
             <li><a class="footer-link" href="about_us.html#our_blogs">OUR BLOGS</a></li>
             <li><a class="footer-link" href="about_us.html#our_testimonials">OUR TESTIMONIALS</a></li>
-            <li><a class="footer-link" href="about_us.html#our_team">OUR TEAM</a></li>
+            <!-- <li><a class="footer-link" href="about_us.html#our_team">OUR TEAM</a></li> -->
             <li><a class="footer-link" href="about_us.html#our_csr">OUR CSR INITIATIVES</a></li>
           </ul>
 
