--- a/expand_your_business.html
+++ b/expand_your_business.html
@@ -101,7 +101,7 @@
                     <li><a class="dropdown-item" href="about_us.html#our_core_beliefs">OUR CORE BELIEFS</a></li>
                     <li><a class="dropdown-item" href="about_us.html#our_blogs">OUR BLOGS</a></li>
                     <li><a class="dropdown-item" href="about_us.html#our_testimonials">OUR TESTIMONIALS</a></li>
-                    <li><a class="dropdown-item" href="about_us.html#our_team">OUR TEAM</a></li>
+                    <!-- <li><a class="dropdown-item" href="about_us.html#our_team">OUR TEAM</a></li> -->
                     <li><a class="dropdown-item" href="about_us.html#our_csr">OUR CSR INITIATIVES</a></li>
                   </ul>
                 </li>
@@ -406,7 +406,7 @@
             <li><a class="footer-link" href="about_us.html#our_core_beliefs">OUR CORE BELIEFS</a></li>
             <li><a class="footer-link" href="about_us.html#our_blogs">OUR BLOGS</a></li>
             <li><a class="footer-link" href="about_us.html#our_testimonials">OUR TESTIMONIALS</a></li>
-            <li><a class="footer-link" href="about_us.html#our_team">OUR TEAM</a></li>
+            <!-- <li><a class="footer-link" href="about_us.html#our_team">OUR TEAM</a></li> -->
             <li><a class="footer-link" href="about_us.html#our_csr">OUR CSR INITIATIVES</a></li>
           </ul>
 
